chore: markdown styles

--- a/src/assets/styles/preset.scss
+++ b/src/assets/styles/preset.scss
@@ -21,7 +21,7 @@ body {
 	}
 
 	code {
-		font-family: Consolas, Menlo, Roboto Mono, SF Mono, Monaco, 'Courier New', monospace;
+		font-family: Menlo, Consolas, Roboto Mono, SF Mono, Monaco, 'Courier New', monospace;
 
 		-webkit-text-stroke: 0.1px;
 	}
