--- a/src/assets/styles/preset.scss
+++ b/src/assets/styles/preset.scss
@@ -13,6 +13,7 @@ body {
 
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	scroll-behavior: smooth;
 
 	*,
 	*::before,
