--- a/src/components/header/style/header.scss
+++ b/src/components/header/style/header.scss
@@ -1,3 +1,5 @@
+$header_height: 5rem;
+
 .header {
 	position: fixed;
 	top: 0;
@@ -6,11 +8,12 @@
 	align-items: center;
 	padding: 0 1rem 0 8rem;
 	width: 100%;
-	height: 5rem;
+	height: $header_height;
 	background: $background;
 	box-shadow: 0 0 2px rgba($color: #000000, $alpha: 0.2);
 
 	@include glass;
+	$title_width: 110rem;
 	@media screen and (max-width: $breakpoint_sm) {
 		padding-left: 7rem;
 	}
@@ -21,6 +24,31 @@
 
 		@media screen and (max-width: $breakpoint_sm) {
 			left: 1rem;
+		}
+	}
+
+	> .article_title {
+		position: absolute;
+		left: calc(50% - #{$title_width / 2});
+		display: flex;
+		overflow: hidden;
+		align-items: center;
+		width: $title_width;
+		height: 100%;
+
+		> h2 {
+			overflow: hidden;
+			margin: 0 4rem;
+			width: 80%;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			font-size: 2rem;
+			transition: transform $normal ease-out;
+			transform: translateY($header_height);
+
+			&.show {
+				transform: translateY(0);
+			}
 		}
 	}
 
