--- a/src/assets/styles/preset.scss
+++ b/src/assets/styles/preset.scss
@@ -14,6 +14,7 @@ body {
 
 #root {
 	box-sizing: border-box;
+	margin-right: calc(100% - 100vw);
 	color: $text_primary;
 
 	-webkit-font-smoothing: antialiased;
