--- a/src/views/home/style/index.module.scss
+++ b/src/views/home/style/index.module.scss
@@ -8,7 +8,9 @@
 		}
 
 		.home_wrapper {
-			min-height: calc(100vh - 7rem);
+			.list_wrapper {
+				min-height: calc(100vh - 7rem);
+			}
 		}
 	}
 }
